add endpoint  /api/v1/customer/login + add redis client
