# internal/customer/controller/controllerhttp.go
@@ -38,3 +38,27 @@ func (ctrl ControllerHTTP) Register(c *fiber.Ctx) error {
 		Code: fiber.StatusCreated,
 	})
 }
+
+// @Summary Login Customer
+// @Description Login Customer
+// @Tags Customer
+// @Accept json
+// @Produce json
+// @Param body body model.CustomerLoginRequest true "Payload Customer Login Request"
+// @Success 200 {object} pkgutil.HTTPResponse
+// @Failure 400 {object} pkgutil.HTTPResponse{errors=[]pkgutil.ErrValidationResponse} "Error validation field"
+// @Failure 500 {object} pkgutil.HTTPResponse
+// @Router /api/v1/customer/login [post]
+func (ctrl ControllerHTTP) Login(c *fiber.Ctx) error {
+	var req model.CustomerLoginRequest
+	err := c.BodyParser(&req)
+	exception.PanicIfNeeded(err)
+
+	res, err := ctrl.svc.Login(c.UserContext(), req)
+	exception.PanicIfNeeded(err)
+
+	return c.Status(fiber.StatusOK).JSON(pkgutil.HTTPResponse{
+		Code: fiber.StatusOK,
+		Data: res,
+	})
+}
