# internal/model/customer.go
@@ -5,3 +5,16 @@ type CustomerRegisterRequest struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required,min=8,max=20"`
 }
+
+type CustomerLoginRequest struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8,max=20"`
+}
+
+type CustomerLoginResponse struct {
+	AccessToken           string `json:"access_token"`
+	ExpiresIn             int    `json:"expires_in"`
+	TokenType             string `json:"token_type"`
+	RefreshToken          string `json:"refresh_token"`
+	ExpiresInRefreshToken int    `json:"expires_in_refresh_token"`
+}
